--- a/drumstyll.css
+++ b/drumstyll.css
@@ -16,6 +16,7 @@ button{
     text-decoration: none;
     margin-left: 140px;
     margin-top: 30px;
+}
 h1{
     margin-left: 220px;
     font-size: 29px;
